--- a/public/assets/css/style6.css
+++ b/public/assets/css/style6.css
@@ -106,7 +106,7 @@ body {
     border: none;
     color: white;
     font-size: 12px;
-    margin: 200px auto auto auto ;
+    margin: 100px auto auto 95px ;
     cursor: pointer;
     background-color: #3da9fc;
     width: 150px;
