--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -18,6 +18,7 @@
     transition: 0.5s;
     font-size: 15px;
     padding: 5px;
+    color: white;
 }
 .button:hover {
     box-shadow: 0 0 0 black;
