--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&family=Poppins&family=Questrial&family=Satisfy&display=swap");
+
 :root {
     --Background: #d8eefe;
     --biru-tua: #094067;
@@ -17,6 +19,7 @@ body {
     background-position: 100% 20%;
     background-size: 38%;
     height: 100vh;
+    font-family: "Poppins", sans-serif;
 }
 
 .ellipse-23 {
@@ -29,45 +32,69 @@ body {
     margin-left: 55vh;
 }
 
-.inputan3 {
-    width: 100px;
+.user {
+    width: 80%;
     color: rgba(0, 0, 0, 1);
     position: absolute;
     top: 160px;
     left: 60px;
-    font-family: Inter;
     font-weight: Regular;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     font-size: 12px;
     opacity: 1;
     text-align: left;
 }
-.inputan4 {
-    width: 100px;
+.pass {
+    width: 85%;
     color: rgba(0, 0, 0, 1);
     position: absolute;
     top: 235px;
     left: 60px;
-    font-family: Inter;
+    display: flex;
+        flex-direction: column;
+        gap: 10px;
     font-weight: Regular;
     font-size: 12px;
     opacity: 1;
     text-align: left;
 }
 
-.kolom3 {
-    width: 60%;
+.user input{
+    width: 100%;
     height: 30px;
-    position: absolute;
     top: 185px;
     left: 60px;
+    border-radius: 5px;
+    border: 1px var(--biru-muda) solid;
+    padding: 0 10px;
+    font-family: "Poppins", sans-serif;
 }
 
-.kolom4 {
-    width: 60%;
+.pass input{
+    width: 85%;
     height: 30px;
-    position: absolute;
     top: 260px;
     left: 60px;
+    border-radius: 5px;
+    border: 1px var(--biru-muda) solid;
+    padding: 0 10px;
+    font-family: "Poppins", sans-serif;
+}
+
+.p{
+    display: flex;
+    justify-content: space-between;
+    gap: 0;
+}
+
+.p i{
+    margin:  auto;
+    background-color: #3da9fc;
+    padding: 5px;
+    border-radius: 5px;
+    transform: scale(1.5);
 }
 
 .checkbox {
