--- a/public/assets/css/acara.css
+++ b/public/assets/css/acara.css
@@ -140,6 +140,10 @@ nav ul li .button:hover {
     display: flex;
 }
 
+.top{
+    background-color: #0081c9;
+}
+
 .sec-2 .search input{
     width: 100%;
     border: none;
