--- a/public/assets/css/acaraEdit.css
+++ b/public/assets/css/acaraEdit.css
@@ -1,41 +1,59 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
 
-body{
+body {
     height: 100vh;
 }
 
-.upload{
-    background-color: #0081C9;
+.upload {
+    background-color: #0081c9;
     color: white;
-    width: 150%;
-    height: 10%;
+    width: 100%;
+    padding: 10px;
     text-align: center;
     border-radius: 5px;
     border: none;
-
 }
-.kursor{
+
+.satu{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: center;
+}
+
+.dua kursor{
+    box-shadow: 4px 5px 8px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 4px 5px 8px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 4px 5px 8px 0px rgba(0, 0, 0, 0.75);
+        transition: 0.5s;
+}
+
+.dua input:hover{
+    box-shadow: none;
+}
+
+.kursor {
     cursor: pointer;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&family=Poppins&family=Questrial&family=Satisfy&display=swap");
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-  font-family: 'Poppins', sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: "Poppins", sans-serif;
 }
 
-body{
-   background-color: #D8EEFE;
+body {
+    background-color: #d8eefe;
 }
-.judul{
+.judul {
     width: 100%;
     padding: 0px 50px;
     margin-top: 30px;
@@ -43,154 +61,151 @@ body{
 
 /* Sidebar */
 
-.wrapper{
-  display: flex;
-  position: relative;
+.wrapper {
+    display: flex;
+    position: relative;
 }
 
-.wrapper .sidebar{
-  width: 200px;
-  height: 100%;
-  background: #0081C9;
-  padding: 300px 0px;
-  position: fixed;
+.wrapper .sidebar {
+    width: 200px;
+    height: 100%;
+    background: #0081c9;
+    padding: 300px 0px;
+    position: fixed;
 }
 
-.wrapper .sidebar h2{
-  color: #fff;
-  text-transform: uppercase;
-  text-align: center;
-  margin-bottom: 30px;
+.wrapper .sidebar h2 {
+    color: #fff;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
-.wrapper .sidebar ul li{
-  padding: 15px;
-  border-bottom: 1px solid #bdb8d7;
-  border-bottom: 1px solid rgba(0,0,0,0.05);
-  border-top: 1px solid rgba(255,255,255,0.05);
-}    
-
-.wrapper .sidebar ul li a{
-  color: white;
-  display: block;
+.wrapper .sidebar ul li {
+    padding: 15px;
+    border-bottom: 1px solid #bdb8d7;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    border-top: 1px solid rgba(255, 255, 255, 0.05);
 }
 
-.wrapper .sidebar ul li a .fas{
-  width: 25px;
+.wrapper .sidebar ul li a {
+    color: white;
+    display: block;
 }
 
-.wrapper .sidebar ul li:hover{
-  background-color: #094067;
+.wrapper .sidebar ul li a .fas {
+    width: 25px;
 }
-    
-.wrapper .sidebar ul li:hover a{
-  color: #fff;
+
+.wrapper .sidebar ul li:hover {
+    background-color: #094067;
 }
- 
+
+.wrapper .sidebar ul li:hover a {
+    color: #fff;
+}
+
 /* Header */
-.wrapper .main_content{
-  width: 100%;
-  margin-left: 200px;
+.wrapper .main_content {
+    width: 100%;
+    margin-left: 200px;
 }
 
-.wrapper .main_content .header{
-  padding: 20px;
-  display: flex;
-  justify-content: space-around;
-  background: #fff;
-  color: #717171;
-  box-shadow: 1px 5px 5px -3px rgba(0,0,0,0.75);
--webkit-box-shadow: 1px 5px 5px -3px rgba(0,0,0,0.75);
--moz-box-shadow: 1px 5px 5px -3px rgba(0,0,0,0.75);
-  
+.wrapper .main_content .header {
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    background: #fff;
+    color: #717171;
+    box-shadow: 1px 5px 5px -3px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 1px 5px 5px -3px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 1px 5px 5px -3px rgba(0, 0, 0, 0.75);
 }
 
-.profile{
-  display: flex;
-  gap: 20px;
-  background-color: #0083c960;
-  padding: 5px;
-  border-radius:10px;
-  color: black;
+.profile {
+    display: flex;
+    gap: 20px;
+    background-color: #0083c960;
+    padding: 5px;
+    border-radius: 10px;
+    color: black;
 }
 
-.wrapper .main_content .info{
-  margin: 20px;
-  color: #717171;
-  line-height: 25px;
+.wrapper .main_content .info {
+    margin: 20px;
+    color: #717171;
+    line-height: 25px;
 }
 
-.wrapper .main_content .info div{
-  margin-bottom: 20px;
+.wrapper .main_content .info div {
+    margin-bottom: 20px;
 }
-
 
 /* ISI */
 
-
-.bungkus{
+.bungkus {
     display: flex;
     height: 100%;
     justify-content: space-between;
     align-items: center;
     margin-top: -50px;
-    
 }
 
-.dua{
+.dua {
     display: flex;
     flex-direction: column;
-    gap: 5%;
+    gap: 10px;
     margin-right: 100px;
 }
 
-.data{
+.data {
     margin: auto;
 }
 
-.namaAcara{
+.namaAcara {
     background: none;
     width: 100%;
-    
 }
 
-.Deskripsi{
-    display:flex ;
+.Deskripsi {
+    display: flex;
     flex-direction: column;
 }
 
-input[type="date"], input[type="time"]{
-    background:none;
+input[type="date"],
+input[type="time"] {
+    background: none;
     border-radius: 5px;
-    border:  2px solid #0081C9;
+    border: 2px solid #0081c9;
     width: 100%;
-
 }
 
-.inputan{
+.inputan {
     background: none;
     width: 100%;
     cursor: text;
     border-radius: 5px;
-    border: 2px solid #0081C9;
+    border: 2px solid #0081c9;
     padding: 3px;
 }
 
-textarea{
+textarea {
     resize: none;
 }
 
-.form{
+.form {
     display: flex;
     width: 100%;
+    height: 100%;
     gap: 10%;
+    margin-top: 50px;
     justify-content: space-evenly;
 }
 
-.form2{
+.form2 {
     border-radius: 10px;
-    width: 150%;
-    height: 80%;
+    width: 100%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -198,30 +213,30 @@ textarea{
     background-color: white;
 }
 
-form :where(.icon){
-    color: #0081C9;
+form :where(.icon) {
+    color: #0081c9;
 }
 
-from .icon{
+from .icon {
     font-size: 50px;
 }
 
-.search{
-    background-color: #D8EEFE;
+.search {
+    background-color: #d8eefe;
     width: 1000px;
     height: 50px;
     gap: 1%;
     display: flex;
     justify-content: space-around;
     border-radius: 10px;
-  }
-  
-  .search span{
-    margin:auto;
+}
+
+.search span {
+    margin: auto;
     padding: 10px;
-  }
-  
-  .search2{
+}
+
+.search2 {
     outline: none;
     background: none;
     display: flex;
@@ -230,6 +245,4 @@ from .icon{
     height: 50px;
     border: none;
     border-radius: 10px;
-  }
-
-  
+}
