--- a/public/assets/css/acara.css
+++ b/public/assets/css/acara.css
@@ -139,14 +139,13 @@ nav ul li .button:hover {
     display: flex;
 }
 
-.search-2{
+.search-2 {
     outline: none;
 }
 
-.top{
+.top {
     background-color: #0081c9;
 }
-
 
 .sec-2 .search input {
     width: 100%;
@@ -166,6 +165,7 @@ nav ul li .button:hover {
 .sec-3 .card {
     background-color: white;
     width: 13%;
+    margin: 0 20px;
     height: 350px;
     border-radius: 10px;
     display: flex;
