create read admin organisasi

--- a/public/assets/css/style5.css
+++ b/public/assets/css/style5.css
@@ -112,6 +112,10 @@ nav ul li button:hover {
     margin-right: 150px;
 }
 
+.gmbr1{
+    width: 300px;
+}
+
 .isi1 {
     margin-top: 50px;
     font-size: 15px;
