--- a/public/assets/css/style5.css
+++ b/public/assets/css/style5.css
@@ -113,7 +113,8 @@ nav ul li button:hover {
 }
 
 .gmbr1{
-    width: 300px;
+    width: 200px;
+    
 }
 
 .isi1 {
@@ -155,9 +156,9 @@ nav ul li button:hover {
     position: relative;
         display: grid;
         background-color: white;
-        grid-template-columns: 25% auto 20%;
+        grid-template-columns: 18% auto 20%;
         width: 80%;
-        height: fit-content;
+        height: 50%;
         border-radius: 10px;
         margin-top: 10px;
         padding: 1%;
