--- a/public/assets/css/acara.css
+++ b/public/assets/css/acara.css
@@ -21,6 +21,19 @@ button {
     transition: 0.5s;
     font-size: 15px;
     padding: 5px;
+    text-decoration: none;
+}
+.button {
+    background-color: #0081c9;
+    color: #d9edf8;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
+    width: 200px;
+    transition: 0.5s;
+    font-size: 15px;
+    padding: 5px;
+    text-decoration: none;
 }
 button:hover {
     box-shadow: 0 0 0 black;
