--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -40,7 +40,7 @@ body{
   border-bottom: 1px solid #bdb8d7;
   border-bottom: 1px solid rgba(0,0,0,0.05);
   border-top: 1px solid rgba(255,255,255,0.05);
-}    
+}
 
 .wrapper .sidebar ul li a{
   color: white;
@@ -54,11 +54,11 @@ body{
 .wrapper .sidebar ul li:hover{
   background-color: #094067;
 }
-    
+
 .wrapper .sidebar ul li:hover a{
   color: #fff;
 }
- 
+
 
 .wrapper .main_content{
   width: 100%;
@@ -74,7 +74,7 @@ body{
   box-shadow: 1px 5px 5px -3px rgba(0,0,0,0.75);
 -webkit-box-shadow: 1px 5px 5px -3px rgba(0,0,0,0.75);
 -moz-box-shadow: 1px 5px 5px -3px rgba(0,0,0,0.75);
-  
+
 }
 
 
@@ -97,7 +97,9 @@ body{
   margin-bottom: 20px;
 }
 
-
+.profile:hover{
+color: red;
+}
 
 .box-1{
  width: 150vh;
