--- a/public/assets/css/style6.css
+++ b/public/assets/css/style6.css
@@ -168,7 +168,12 @@ footer{
 
   }
 
-
+  .judif{
+    font-size: 1.2rem;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-right: 10px;
+  }
 
   .rekomendasi2{
     background-color: white;
