--- a/public/assets/css/acara.css
+++ b/public/assets/css/acara.css
@@ -14,6 +14,7 @@ html {
 
 .button {
     background-color: #0081c9;
+    margin: auto;
     color: #d9edf8;
     border: 0;
     border-radius: 5px;
@@ -175,9 +176,9 @@ nav ul li .button:hover {
 
 .sec-3 .card {
     background-color: white;
-    width: 100%%;
-    margin: 0 ;
-    height: 350px;
+    width: 15%;
+    margin: 0 15px;
+    height: 450px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -189,6 +190,7 @@ nav ul li .button:hover {
 
 .sec-3 .card .img {
     width: 100%;
+    max-width: 100px;
     height: auto;
     border-radius: 10px;
 }
