--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -101,6 +101,16 @@ body{
 color: red;
 }
 
+table{
+    width: 100%;
+    height: 100%;
+    background-color: #fff5;
+
+    backdrop-filter: blur(7px);
+    box-shadow: 0 .4rem .8rem #0005;
+    border-radius: .8rem;
+}
+
 .box-1{
  width: 150vh;
  height: 50vh;
@@ -130,19 +140,21 @@ color: red;
   display: flex;
   position: relative;
   width: 65vh;
-  height: 25vh;
+  height: fit-content;
   margin: 0 70px;
   background-color: white;
   border-radius: 20px;
   margin-left: 10px;
 }
 .box-3{
-  display: flex;
+ display: flex;
   position: relative;
   width: 65vh;
-  height: 25vh;
+  height: fit-content;
+
   background-color: white;
   border-radius: 20px;
+
 }
 
 .box-3 p{
