--- a/public/assets/css/style5.css
+++ b/public/assets/css/style5.css
@@ -29,6 +29,7 @@ body {
     background-color: #0081c9;
     color: #d9edf8;
     border: 0;
+    margin: auto;
     border-radius: 5px;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
     width: 200px;
@@ -183,6 +184,12 @@ nav ul li button:hover {
 
 .kolom:hover {
     transform: scale(1.05);
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 footer {
