--- a/public/assets/css/style5.css
+++ b/public/assets/css/style5.css
@@ -233,3 +233,17 @@ footer {
     text-decoration: none;
     color: black;
 }
+
+.edit{
+    background-color: #0081c9;
+    color: #d9edf8;
+    border: 0;
+    margin: auto;
+    border-radius: 5px;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
+    width: 200px;
+    transition: 0.5s;
+    font-size: 15px;
+    padding: 5px;
+    text-decoration: none;
+}
