--- a/public/assets/css/acara.css
+++ b/public/assets/css/acara.css
@@ -178,9 +178,10 @@ nav ul li .button:hover {
     background-color: white;
     width: 15%;
     margin: 0 15px;
-    height: 450px;
+    height: 400px;
     border-radius: 10px;
     display: flex;
+    justify-content: space-evenly;
     flex-direction: column;
     gap: 10px;
     box-shadow: 6px 5px 12px -3px rgba(0, 0, 0, 0.45);
@@ -233,4 +234,16 @@ nav ul li .button:hover {
     background-color: rgba(79, 79, 79, 0.427);
     border-radius: 3px;
     padding: 2px 3px;
+}
+
+form{
+    display: flex;
+    width: 100%;
+}
+
+form button{
+    border-radius: 10px;
+    background-color: #0081c9;
+    color: white;
+    border: none;
 }
