--- a/public/assets/css/admin-acara.css
+++ b/public/assets/css/admin-acara.css
@@ -11,7 +11,19 @@
 
 body {
     background-color: #d8eefe;
-    height: 200vh;
+    height: 100vh;
+}
+
+.su{
+    background-color: #0081c9;
+}
+
+.ser{
+    background-color: #0081c9;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 0 5px;
 }
 
 .wrapper {
