--- a/public/assets/css/detil-acara.css
+++ b/public/assets/css/detil-acara.css
@@ -135,12 +135,14 @@ margin-left: 250px;
   top: 641px;
   border: none;
   color: white;
-  padding: 10px 20px;
+  padding: auto;
+  padding-top: 5px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
   font-size: 22px;
-  margin: 4px 2px;
+
   cursor: pointer;
   background-color: #0081c9;
   width: 219px;
