--- a/public/assets/css/style4.css
+++ b/public/assets/css/style4.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&family=Poppins&family=Questrial&family=Satisfy&display=swap");
+
 :root {
     --Background: #d8eefe;
     --biru-tua: #094067;
@@ -17,6 +19,7 @@ body {
     background-position: 100% 20%;
     background-size: 38%;
     height: 173vh;
+    font-family: 'Poppins', sans-serif;
 }
 
 .ellipse-23 {
