--- a/public/assets/css/acara.css
+++ b/public/assets/css/acara.css
@@ -24,9 +24,14 @@ html {
     font-size: 15px;
     padding: 5px;
     text-decoration: none;
+    
 }
 button:hover {
     box-shadow: 0 0 0 black;
+}
+
+.form{
+    margin-top: 10px;
 }
 
 /* NAVBAR */
@@ -181,7 +186,7 @@ nav ul li .button:hover {
     height: 400px;
     border-radius: 10px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-direction: column;
     gap: 10px;
     box-shadow: 6px 5px 12px -3px rgba(0, 0, 0, 0.45);
@@ -189,11 +194,11 @@ nav ul li .button:hover {
     -moz-box-shadow: 6px 5px 12px -3px rgba(0, 0, 0, 0.45);
 }
 
-.sec-3 .card .img {
+.sec-3 .card img {
     width: 100%;
-    max-width: 100px;
-    height: auto;
+    height: 220px;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .sec-3 .card .teks {
