--- a/public/assets/css/style5.css
+++ b/public/assets/css/style5.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    height: 130vh;
+    height: fit-content;
     background: var(--Background) url("/assets/pics/bg.png");
     background-repeat: no-repeat;
     background-position-y: 400px;
@@ -48,8 +48,8 @@ nav {
     background-color: #abe0ffa9;
     padding: 10px 0;
     backdrop-filter: blur(3px);
-    z-index: 1;
-    margin-top: -160px;
+    z-index: 100;
+    margin-top: -100px;
 }
 
 nav div {
@@ -115,7 +115,7 @@ nav ul li button:hover {
     margin-left: 170px;
     width: 80%;
     height: fit-content;
-    margin-top: 160px;
+    margin-top: 100px;
 }
 
 .col-1 {
@@ -131,7 +131,8 @@ nav ul li button:hover {
 
 .gmbr1{
     width: 200px;
-
+    height: 100px;
+    object-fit: cover;
 }
 
 .isi1 {
@@ -165,7 +166,7 @@ nav ul li button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 150px;
+    margin-top: 100px;
     gap: 0;
 }
 
