--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,7 +3,7 @@
     --biru-tua: #094067;
     --abu-abu: #5f6c7b;
     --white: #fffffe;
-    --biru-muda: #3da9fc;
+    --biru-muda: #3da9fc;}
 /* Import Fonts*/
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
